# regolith-powerd

./: Cargo.toml  Makefile  org.gnome.desktop.session.gschema.xml  org.gnome.settings-daemon.plugins.power.gschema.xml
data/: 35_ignore_lidswitch.conf  regolith-init-powerd.service
debian/: changelog  control  copyright  install  logind-ignore-lidswitch.install  logind-ignore-powerkey.install
src/: logind.rs  main.rs
