[package]
name = "regolith-powerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
brightness = "0.5.0"
gio = "0.15.12"
glib = "0.15.12"
gsettings-macro = "0.1.14"
log = "0.4"
pretty_env_logger = "0.4.0"
