[package]
name = "regolith-powerd"
version = "0.3.3"
edition = "2021"
license = "GPL-3.0+"
authors = ["Soumya Ranjan Patniak <soumyaranjan1812@gmail.com>", "Ken Gilmer <kgilmer@gmail.com>"]
description = "Power Settings Daemeon for Regolith Wayland Session"
repository = "https://github.com/regolith-linux/regolith-powerd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
gio = "0.18.4"
glib = "0.18.5"
gsettings-macro = "0.1.20"
swayipc = "3.0.1"
zbus = "3.15.2"
